Fixed a bug in the launcher where it may fail to launch due to spaces in the arguments